--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     },
     "homepage": "https://github.com/DarkArkLord/WoDCharSheet#readme",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --config configuration/webpack.dev.config.js --mode=development",
+        "watch": "webpack --config configuration/webpack.dev.config.js --mode=development --watch",
+        "bundle": "npm install && npm run watch",
+        "dev": "webpack serve --config configuration/webpack.dev.config.js --mode=development",
+        "production": "webpack --config configuration/webpack.prod.config.js --mode=production"
     },
     "devDependencies": {
         "css-loader": "^7.1.2",
