--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "watch": "webpack --config configuration/webpack.dev.config.js --mode=development --watch",
         "bundle": "npm install && npm run watch",
         "dev": "webpack serve --config configuration/webpack.dev.config.js --mode=development",
-        "production": "webpack --config configuration/webpack.prod.config.js --mode=production"
+        "prod": "webpack --config configuration/webpack.prod.config.js --mode=production"
     },
     "devDependencies": {
         "css-loader": "^7.1.2",
