--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wodcharsheet",
     "description": "Электронный лист персонажа для WoD",
-    "version": "1.0.0",
+    "version": "0.7",
     "keywords": [],
     "author": "DarkArkLord",
     "license": "MIT",
@@ -27,6 +27,7 @@
         "style-loader": "^4.0.0",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0"
+        "webpack-dev-server": "^5.2.0",
+        "clean-webpack-plugin": "^4.0.0"
     }
 }
