--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
         "prod-min": "webpack --config configuration/webpack.prod.min.config.js --mode=production"
     },
     "devDependencies": {
+        "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^7.1.2",
         "html-webpack-plugin": "^5.6.3",
         "style-loader": "^4.0.0",
+        "ts-loader": "^9.5.2",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0",
-        "clean-webpack-plugin": "^4.0.0"
+        "webpack-dev-server": "^5.2.0"
     }
 }
